docs/CarService/templates/car-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.28.0 (c4137012e)
  labels:
    io.kompose.service: car-service
  name: car-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: car-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.28.0 (c4137012e)
      labels:
        io.kompose.network/carservice-default: "true"
        io.kompose.service: car-service
    spec:
      containers:
        - image: fontyssa/car-service
          name: car-service
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
