docs/CarService/templates/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.28.0 (c4137012e)
  labels:
    io.kompose.service: car-db
  name: car-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: car-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.28.0 (c4137012e)
      labels:
        io.kompose.service: car-db
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: vehicle
            - name: POSTGRES_PASSWORD
              value: postgres
            - name: POSTGRES_USER
              value: postgres
          image: fontyssa/postgres-extended
          name: car-db
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: car-db
      restartPolicy: Always
      volumes:
        - name: car-db
          persistentVolumeClaim:
            claimName: car-db
