docs/CarService/templates/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.28.0 (c4137012e)
  labels:
    io.kompose.service: car-db
  name: car-db
spec:
  ports:
    - name: "11001"
      port: 11001
      targetPort: 5432
  selector:
    io.kompose.service: car-db
